# kaki

./: .gitignore  README.md  pyproject.toml
examples/livedemo/: hotreload.py  main.py
examples/livedemo/live/: test.py  ui.py
kaki/: __main__.py  hotreload.py  main.py.tmp  server.py
