[tool.poetry]
name = "kaki"
version = "0.1.0"
description = ""
authors = ["Kenechukwu Akubue <kengoon19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
watchdog = "^6.0.0"
kivy = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
